# Slite

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  manager.py  pyproject.toml  run_jobs.py  start_server.py  submit.ipynb  submit.py
notebooks/: RunNotebookDemo.ipynb
slite/: __init__.py  client.py  manager.py  registry.py  run_jobs.py  runner.py  start_server.py  submit.py  utils.py
slurmlite/: __init__.py  exp_management.py
